Solved the event box overflow issue

--- a/assets/stylesheets/views/_home.scss
+++ b/assets/stylesheets/views/_home.scss
@@ -72,6 +72,7 @@
 	.quick-buttons .box,
 	.user-area .box{
 		height: $lineheight * 4;
+		overflow: hidden;
 	}
 	
 	.quick-buttons {
@@ -121,9 +122,14 @@
 			margin-bottom: 5px;
 		}
 
+		.meta, .event-title {
+			display: inline;
+		}
+
 		.meta li {
 			display: inline;
 			font-size: .9em;
+			white-space: nowrap;
 
 			&::after {
 				display: inline-block;
